# ga-test

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  tox.toml
.github/workflows/: build.yml
libs/client/: .gitignore  pyproject.toml
libs/client/src/client/: config.py  constant.py  exceptions.py  lock.py  log.py  socket.py  system.py
libs/client/src/client/scan/: directories.py  exceptions.py  files.py  helper.py
libs/client/tests/: test_lock_client.py  test_socket_client.py
resources/: config.json
scripts/: build_binary.py  build_installer.py  rules.py
scripts/helper/: __init__.py
src/ga_test/gtk4/: __init__.py  __main__.py
src/gat/: common.py
src/gat/cli/: __init__.py  __main__.py  application.py
src/gat/cli/add/: __init__.py
src/gat/cli/check/: __init__.py
src/gat/cli/generate/: __init__.py
src/gat/gtk4/: __main__.py
template/: installer.nsi.j2  ruff.toml.j2
